syntax = "proto2";

option java_multiple_files = true;
option java_package = "com.r3.sgx.test.proto";

/**
 * Send a new jar to the enclave.
 * An empty message will cause the enclave to clear its jar storage.
 */
message SendJar {
    /**
     * A byte array representation of the jar file
     */
    required bytes data = 1;
}

/**
 * Execute test in the enclave
 */
message ExecuteTest {
    /**
     * The test class name to be executed in the enclave
     */
    required string className = 1;
    /**
     * Optional serialized test input
     */
    optional bytes input = 2;
}

/**
 * Test result to be asserted by the host
 */
message TestResult {
    /**
     * Test class name to which the result belongs
     */
    required string className = 1;
    /**
     * Serialized test result
     */
    required bytes result = 2;
}

/**
 * Request the sandboxed byte code for a class
 */
message ByteCodeRequest {
    /**
     * Class name for which to obtain the sandboxed byte code
     */
    required string className = 1;
}

/**
 * The sandboxed byte code result
 */
message ByteCodeResult {
    /**
     * The class name for which the byte code is being returned
     */
    required string className = 1;
    /**
     * The byte array representing the byte code
     */
    required bytes byteCode = 2;
}
